--- a/index.html
+++ b/index.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="styles.css" />
-  </head>
-  <body>
-      <!-- add your name -->
-    <h1>Hi! My name is loreum ipsum.</h1>
-    <h2>I am a web developer.</h2>
-    <!-- add your portrait photo -->
-    <img
-      src="images/placeholder-square.jpg"
-      alt="Portrait of lorem ipsum"
-      style="width: 500px; height: 500px"
-    />
-    <!-- add a short biography. Include where you are from, your education background, your current program, and something interesting about yourself. -->
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam adipisci
-      cum nihil et! Voluptatum quae perspiciatis natus quos, saepe numquam
-      nesciunt distinctio libero magnam iusto, quod, nulla velit enim culpa!
-    </p>
-    <!-- add a list of your favourite web development tools. -->
-    <p>My favourite tools are</p>
-    <ul>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-    </ul>
-    <!-- add a list of your strongest web development skills. -->
-    <p>My skills include</p>
-    <ul>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-      <li>lorem ipsum</li>
-    </ul>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+</head>
+
+<body>
+  <!-- add your name -->
+  <h1>Hi! My name is loreum ipsum.</h1>
+  <h2>I am a web developer.</h2>
+  <!-- add your portrait photo -->
+  <img src="images/placeholder-square.jpg" alt="Portrait of lorem ipsum" style="width: 500px; height: 500px" />
+  <!-- add a short biography. Include where you are from, your education background, your current program, and something interesting about yourself. -->
+  <p>
+    With a fervent passion for crafting digital experiences, I intertwine my love for coding and creativity,
+    effortlessly venturing between the worlds of technology and artistic expression.Whether I'm navigating through code
+    lines or hiking trails, exploration and innovation are at the heart of what I do. Smart enough to know how dumb I
+    can be, and while I may be extremely lazy, I'll still find the fastest ways mostly to get to the snack cabinet
+    without getting up.
+  </p>
+  <!-- add a list of your favourite web development tools. -->
+  <p>My favourite tools are</p>
+  <ul>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+  </ul>
+  <!-- add a list of your strongest web development skills. -->
+  <p>My skills include</p>
+  <ul>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+    <li>lorem ipsum</li>
+  </ul>
+</body>
+
 </html>
