Revise favourite tools section
-Updated the list of favourite tools in the designated section.
-Ensures the section reflects current preferences and usage.

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     without getting up.
   </p>
   <!-- add a list of your favourite web development tools. -->
-  <p>My favourite tools are</p>
+  <p>My favourite programming languages are</p>
   <ul>
-    <li>lorem ipsum</li>
-    <li>lorem ipsum</li>
-    <li>lorem ipsum</li>
+    <li>Javascript</li>
+    <li>C#</li>
+    <li>C++</li>
   </ul>
   <!-- add a list of your strongest web development skills. -->
   <p>My skills include</p>
