--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Abhiram Shaji</title>
   <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
 <body>
   <!-- add your name -->
-  <h1>Hi! My name is loreum ipsum.</h1>
-  <h2>I am a web developer.</h2>
+  <h1>Hi! My name is Abhiram Shaji</h1>
+  <h2>I am a Android / Web developer.</h2>
   <!-- add your portrait photo -->
   <img src="images/placeholder-square.jpg" alt="Portrait of lorem ipsum" style="width: 500px; height: 500px" />
   <!-- add a short biography. Include where you are from, your education background, your current program, and something interesting about yourself. -->
@@ -32,9 +32,9 @@
   <!-- add a list of your strongest web development skills. -->
   <p>My skills include</p>
   <ul>
-    <li>lorem ipsum</li>
-    <li>lorem ipsum</li>
-    <li>lorem ipsum</li>
+    <li>Team Work</li>
+    <li>Patient</li>
+    <li>Stress Management</li>
   </ul>
 </body>
 
