--- a/about-me.html
+++ b/about-me.html
@@ -8,14 +8,14 @@
   <link rel="stylesheet" type="text/css" href="styles.css" />
 </head>
 
-<body>
+<body class="portfolio">
   <!-- add your name -->
-  <h1>Hi! My name is Abhiram Shaji</h1>
-  <h2>I am a Android / Web developer.</h2>
+  <h1 class="c-portfolio__name">Hi! My name is Abhiram Shaji</h1>
+  <h2 class="c-portfolio__role">I am an Android / Web developer.</h2>
   <!-- add your portrait photo -->
-  <img src="images/placeholder-square.jpg" alt="Portrait of lorem ipsum" style="width: 500px; height: 500px" />
+  <img src="images/placeholder-square.jpg" alt="Portrait of Abhiram Shaji" class="c-portfolio__image" style="width: 500px; height: 500px" />
   <!-- add a short biography. Include where you are from, your education background, your current program, and something interesting about yourself. -->
-  <p>
+  <p class="c-portfolio__biography">
     With a fervent passion for crafting digital experiences, I intertwine my love for coding and creativity,
     effortlessly venturing between the worlds of technology and artistic expression.Whether I'm navigating through code
     lines or hiking trails, exploration and innovation are at the heart of what I do. Smart enough to know how dumb I
@@ -23,18 +23,18 @@
     without getting up.
   </p>
   <!-- add a list of your favourite web development tools. -->
-  <p>My favourite programming languages are</p>
-  <ul>
-    <li>Javascript</li>
-    <li>C#</li>
-    <li>C++</li>
+  <p class="c-portfolio__languages-title">My favourite programming languages are</p>
+  <ul class="c-portfolio__languages-list">
+    <li class="c-portfolio__language">Javascript</li>
+    <li class="c-portfolio__language">C#</li>
+    <li class="c-portfolio__language">C++</li>
   </ul>
   <!-- add a list of your strongest web development skills. -->
-  <p>My skills include</p>
-  <ul>
-    <li>Team Work</li>
-    <li>Patient</li>
-    <li>Stress Management</li>
+  <p class="c-portfolio__skills-title">My skills include</p>
+  <ul class="c-portfolio__skills-list">
+    <li class="c-portfolio__skill">Team Work</li>
+    <li class="c-portfolio__skill">Patient</li>
+    <li class="c-portfolio__skill">Stress Management</li>
   </ul>
 </body>
 
