--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Design System</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="design-system.css">
 </head>
 <body>
-  
+
+<script src="design-system.js"></script>
 </body>
 </html>
