Create mobile navbar structure
Applying this commit will add the HTML structure for a mobile navbar, including a logo image wrapped in a link and a button for hamburger menu functionality

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,17 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="design-system.css">
 </head>
+
 <body>
 
-<script src="design-system.js"></script>
+  <div class="mobile-navbar">
+    <div class="mobile-navbar__logo">
+      <a href="#"><img src="logo.png" alt="Logo"></a>
+    </div>
+    <button id="hamburger-btn" class="mobile-navbar__button">&#9776;</button>
+  </div>
+
+  <script src="design-system.js"></script>
 </body>
+
 </html>
