Add mobile menu structure
Applying this commit will introduce the HTML structure for a mobile menu, including an unordered list with list items for each menu item, each containing a link to a specific section of the webpage.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
     <button id="hamburger-btn" class="mobile-navbar__button">&#9776;</button>
   </div>
 
+  <div id="mobile-menu" class="mobile-menu">
+    <ul class="mobile-menu__list">
+      <li class="mobile-menu__item"><a href="#about-me" class="mobile-menu__link">About Me</a></li>
+      <li class="mobile-menu__item"><a href="#demo-site" class="mobile-menu__link">Demo Site</a></li>
+    </ul>
+  </div>
+
   <script src="design-system.js"></script>
 </body>
 
