Replace logo with text

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <div class="mobile-navbar">
     <div class="mobile-navbar__logo">
-      <a href="#"><img src="logo.png" alt="Logo"></a>
+      <p>DESIGN SYSTEM</p>
     </div>
     <button id="hamburger-btn" class="mobile-navbar__button">&#9776;</button>
   </div>
