Rewrite classes for future compatibility
Applying this commit will refactor the classes to ensure they make sense for both desktop and mobile views, enhancing maintainability and flexibility for future development

--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
 <body>
 
-  <div class="mobile-navbar">
-    <div class="mobile-navbar__logo">
+  <div class="navbar c-navbar">
+    <div class="navbar__logo c-navbar__logo">
       <p>DESIGN SYSTEM</p>
     </div>
-    <button id="hamburger-btn" class="mobile-navbar__button">&#9776;</button>
+    <button id="hamburger-btn" class="navbar__button c-navbar__button">&#9776;</button>
   </div>
-
-  <div id="mobile-menu" class="mobile-menu">
-    <ul class="mobile-menu__list">
-      <li class="mobile-menu__item"><a href="#about-me" class="mobile-menu__link">About Me</a></li>
-      <li class="mobile-menu__item"><a href="#demo-site" class="mobile-menu__link">Demo Site</a></li>
+  
+  <div id="menu" class="menu c-menu">
+    <ul class="menu__list c-menu__list">
+      <li class="menu__item c-menu__item"><a href="#about-me" class="menu__link c-menu__link">About Me</a></li>
+      <li class="menu__item c-menu__item"><a href="#demo-site" class="menu__link c-menu__link">Demo Site</a></li>
     </ul>
-  </div>
+  </div>  
 
   <script src="design-system.js"></script>
 </body>
