Create grid container and color swatch components
Applying this commit will add a new grid container with the class c-grid-container and a grid layout class l-grid, along with a color swatch component class c-color-swatch for future use in the project

--- a/colors.html
+++ b/colors.html
@@ -66,7 +66,9 @@
     </ul>
   </section>
 
-  
+  <section class="c-grid-container l-grid">
+    
+  </section>
 
   <script src="design-system.js"></script>
 </body>
