Add primary color swatches

--- a/colors.html
+++ b/colors.html
@@ -67,7 +67,22 @@
   </section>
 
   <section class="c-grid-container l-grid">
-    
+    <!-- Primary Colors -->
+    <div class="c-color-swatch c-color-swatch--bg-primary">
+        <p class="c-color-swatch__name">Class Name: bg-primary</p>
+        <p class="c-color-swatch__hex">Hex Code: #2D572C</p>
+        <p class="c-color-swatch__uses">Uses: Headings, Body Text</p>
+    </div>
+    <div class="c-color-swatch c-color-swatch--bg-primary-light">
+        <p class="c-color-swatch__name">Class Name: bg-primary-light</p>
+        <p class="c-color-swatch__hex">Hex Code: #AED9AA</p>
+        <p class="c-color-swatch__uses">Uses: Backgrounds, Borders</p>
+    </div>
+    <div class="c-color-swatch c-color-swatch--bg-primary-dark">
+        <p class="c-color-swatch__name">Class Name: bg-primary-dark</p>
+        <p class="c-color-swatch__hex">Hex Code: #1B3A12</p>
+        <p class="c-color-swatch__uses">Uses: Text, Buttons</p>
+    </div>
   </section>
 
   <script src="design-system.js"></script>
