Add accent color swatches

--- a/colors.html
+++ b/colors.html
@@ -83,6 +83,23 @@
         <p class="c-color-swatch__hex">Hex Code: #1B3A12</p>
         <p class="c-color-swatch__uses">Uses: Text, Buttons</p>
     </div>
+
+    <!-- Accent Colors -->
+    <div class="c-color-swatch c-color-swatch--bg-accent">
+        <p class="c-color-swatch__name">Class Name: bg-accent</p>
+        <p class="c-color-swatch__hex">Hex Code: #E0567D</p>
+        <p class="c-color-swatch__uses">Uses: Links, Call-to-Action</p>
+    </div>
+    <div class="c-color-swatch c-color-swatch--bg-accent-light">
+        <p class="c-color-swatch__name">Class Name: bg-accent-light</p>
+        <p class="c-color-swatch__hex">Hex Code: #F4A1B4</p>
+        <p class="c-color-swatch__uses">Uses: Highlighting, Icons</p>
+    </div>
+    <div class="c-color-swatch c-color-swatch--bg-accent-dark">
+        <p class="c-color-swatch__name">Class Name: bg-accent-dark</p>
+        <p class="c-color-swatch__hex">Hex Code: #C04467</p>
+        <p class="c-color-swatch__uses">Uses: Accents, Overlays</p>
+    </div>
   </section>
 
   <script src="design-system.js"></script>
