Add additional accent color swatches

--- a/colors.html
+++ b/colors.html
@@ -117,6 +117,18 @@
         <p class="c-color-swatch__hex">Hex Code: #423D33</p>
         <p class="c-color-swatch__uses">Uses: Text, Borders</p>
     </div>
+    
+    <!-- Additional Accent Colors -->
+    <div class="c-color-swatch c-color-swatch--bg-accent-additional-yellow">
+        <p class="c-color-swatch__name">Class Name: bg-accent-additional-yellow</p>
+        <p class="c-color-swatch__hex">Hex Code: #F9D423</p>
+        <p class="c-color-swatch__uses">Uses: Highlights, Warnings</p>
+    </div>
+    <div class="c-color-swatch c-color-swatch--bg-accent-additional-blue">
+        <p class="c-color-swatch__name">Class Name: bg-accent-additional-blue</p>
+        <p class="c-color-swatch__hex">Hex Code: #7BC0C1</p>
+        <p class="c-color-swatch__uses">Uses: Info Boxes, Badges</p>
+    </div>
   </section>
 
   <script src="design-system.js"></script>
