Add anchor elements
This commit also moves the side bar inside nav menu in the index page. This change is temporary and changes will be made to sidebar when coding the desktop view

--- a/colors.html
+++ b/colors.html
@@ -13,14 +13,14 @@
 
   <nav class="navbar c-navbar">
     <div class="navbar__logo c-navbar__logo">
-      <p>DESIGN SYSTEM</p>
+      <h2>DESIGN SYSTEM</h2>
     </div>
     <button id="hamburger-btn" class="navbar__button c-navbar__button">&#9776;</button>
   </nav>
 
   <div id="menu" class="menu c-menu">
     <ul class="menu__list c-menu__list">
-      <li class="menu__item c-menu__item"><a href="#about-me" class="menu__link c-menu__link">About Me</a></li>
+      <li class="menu__item c-menu__item"><a href="about-me.html" class="menu__link c-menu__link">About Me</a></li>
       <li class="menu__item c-menu__item"><a href="#demo-site" class="menu__link c-menu__link">Demo Site</a></li>
     </ul>
     <hr>
