Add typography section and change font family to josefin sans

--- a/typography.html
+++ b/typography.html
@@ -66,6 +66,17 @@
     </div>
   </div>
 
+  <div class="container">
+    <h1 class="heading">TypoGraphy</h1>
+    <section>
+
+      <h2 class="heading">Playfair Display</h2>
+      <p class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce euismod, nunc eget aliquet laoreet, neque justo blandit dolor, id mollis lectus arcu in nulla. Cras at nulla eget nisl tincidunt finibus. Mauris dignissim nisi id quam sollicitudin tristique. Vestibulum tincidunt, purus nec commodo bibendum, felis quam tristique enim, id varius ex ipsum et purus. Vivamus consectetur interdum mi, vel mattis dolor dictum vel. Nam vehicula augue non sapien dapibus, non dapibus elit facilisis. In hac habitasse platea dictumst. Vestibulum in risus a sem sodales congue ac in arcu. Nulla facilisi. Cras venenatis ultrices odio eget vestibulum.</p>
+
+    </section>
+
+  </div>
+
   <script src="design-system.js"></script>
 </body>
 
