--- a/typography.html
+++ b/typography.html
@@ -66,17 +66,66 @@
     </div>
   </div>
 
-  <div class="container">
-    <h1 class="heading">TypoGraphy</h1>
-    <section>
+  <div class="container body-text">
 
-      <h2 class="heading">Playfair Display</h2>
-      <p class="body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce euismod, nunc eget aliquet laoreet, neque justo blandit dolor, id mollis lectus arcu in nulla. Cras at nulla eget nisl tincidunt finibus. Mauris dignissim nisi id quam sollicitudin tristique. Vestibulum tincidunt, purus nec commodo bibendum, felis quam tristique enim, id varius ex ipsum et purus. Vivamus consectetur interdum mi, vel mattis dolor dictum vel. Nam vehicula augue non sapien dapibus, non dapibus elit facilisis. In hac habitasse platea dictumst. Vestibulum in risus a sem sodales congue ac in arcu. Nulla facilisi. Cras venenatis ultrices odio eget vestibulum.</p>
-
+    <h1 class="heading">Typefaces</h1>
+ 
+    <section class="text-content">
+      <h2 class="heading">Heading Typeface</h2>
+      <ul class="text-content__list">
+        <li class="text-content__item">
+          <strong class="text-content__subtitle">Font Family:</strong> 'Josefin Sans'
+          <ul class="text-content__sublist">
+            <li class="text-content__subitem">
+              <strong class="text-content__subsubtitle">Reason:</strong> Josefin Sans is chosen for headings due to its modern and stylish appearance,
+              making it suitable for creating a contemporary and sleek design. Its geometric shapes and tall x-height
+              lend a sense of sophistication, enhancing the visual impact of headings on the website.
+            </li>
+          </ul>
+        </li>
+        <li class="text-content__item">
+          <strong class="text-content__subtitle">Font Weight:</strong> 700 (Bold)
+        </li>
+        <li class="text-content__item">
+          <strong class="text-content__subtitle">Font Size:</strong> 32px for desktop, 28px for mobile
+        </li>
+        <li class="text-content__item">
+          <strong class="text-content__subtitle">Line Height:</strong> 1.2
+        </li>
+        <li class="text-content__item">
+          <strong class="text-content__subtitle">Letter-spacing:</strong> 1px
+        </li>
+      </ul>
+    
+      <h2 class="heading">Body Text Typeface</h2>
+      <ul class="text-content__list">
+        <li class="text-content__item">
+          <strong class="text-content__subtitle">Font Family:</strong> Lato
+          <ul class="text-content__sublist">
+            <li class="text-content__subitem">
+              <strong class="text-content__subsubtitle">Reason:</strong> Lato is highly readable in body texts, providing a comfortable reading
+              experience for longer texts like articles or product descriptions. Its simplicity complements the elegance
+              of the heading font.
+            </li>
+          </ul>
+        </li>
+        <li class="text-content__item">
+          <strong class="text-content__subtitle">Font Weight:</strong> 400 (Regular) for body, 700 (Bold) for important calls to action
+        </li>
+        <li class="text-content__item">
+          <strong class="text-content__subtitle">Font Size:</strong> 16px for desktop, 14px for mobile
+        </li>
+        <li class="text-content__item">
+          <strong class="text-content__subtitle">Line Height:</strong> 1.6
+        </li>
+        <li class="text-content__item">
+          <strong class="text-content__subtitle">Letter-spacing:</strong> 0.5px
+        </li>
+      </ul>
     </section>
+    
 
   </div>
-
   <script src="design-system.js"></script>
 </body>
 
