Add changes to global styles

--- a/typography.html
+++ b/typography.html
@@ -65,23 +65,13 @@
       </ul>
     </div>
   </div>
-
-  <div class="container body-text">
-
-    <h1 class="heading">Typefaces</h1>
- 
+  
+  <div class="container">
     <section class="text-content">
-      <h2 class="heading">Heading Typeface</h2>
+      <h2>Heading Typeface</h2>
       <ul class="text-content__list">
         <li class="text-content__item">
           <strong class="text-content__subtitle">Font Family:</strong> 'Josefin Sans'
-          <ul class="text-content__sublist">
-            <li class="text-content__subitem">
-              <strong class="text-content__subsubtitle">Reason:</strong> Josefin Sans is chosen for headings due to its modern and stylish appearance,
-              making it suitable for creating a contemporary and sleek design. Its geometric shapes and tall x-height
-              lend a sense of sophistication, enhancing the visual impact of headings on the website.
-            </li>
-          </ul>
         </li>
         <li class="text-content__item">
           <strong class="text-content__subtitle">Font Weight:</strong> 700 (Bold)
@@ -97,17 +87,10 @@
         </li>
       </ul>
     
-      <h2 class="heading">Body Text Typeface</h2>
+      <h2>Body Text Typeface</h2>
       <ul class="text-content__list">
         <li class="text-content__item">
           <strong class="text-content__subtitle">Font Family:</strong> Lato
-          <ul class="text-content__sublist">
-            <li class="text-content__subitem">
-              <strong class="text-content__subsubtitle">Reason:</strong> Lato is highly readable in body texts, providing a comfortable reading
-              experience for longer texts like articles or product descriptions. Its simplicity complements the elegance
-              of the heading font.
-            </li>
-          </ul>
         </li>
         <li class="text-content__item">
           <strong class="text-content__subtitle">Font Weight:</strong> 400 (Regular) for body, 700 (Bold) for important calls to action
