Add changes to color variables and typography section content

--- a/typography.html
+++ b/typography.html
@@ -71,7 +71,7 @@
       <ul class="text-content__list">
         
         <li class="text-content__item">
-          <h1 class="u-text-accent">Heading 1 Aa</h1>
+          <h1 class="c-color-swatch---accent">Heading 1 Aa</h1>
         </li>
         <li class="text-content__item">
           <h2 class="u-ff-serif u-fw-700 u-text-primary">Heading 2 Aa</h2>
@@ -104,21 +104,20 @@
       </ul>
 
       <ul class="text-content__list">
-      <h2 class="u-ff-serif u-fw-700 u-text-primary">Body Text Typeface</h2>
       <li class="text-content__item">
-          <strong class="text-content__subtitle">Font Family:</strong> Lato
+          <strong class="text-content__subtitle">Body Text Font Family:</strong> Lato
         </li>
         <li class="text-content__item">
-          <strong class="text-content__subtitle">Font Weight:</strong> 400 (Regular), 700 (Bold)
+          <strong class="text-content__subtitle">Body Text Font Weight:</strong> 400 (Regular), 700 (Bold)
         </li>
         <li class="text-content__item">
-          <strong class="text-content__subtitle">Font Size:</strong> 16px for desktop, 14px for mobile
+          <strong class="text-content__subtitle">Body Text Font Size:</strong> 16px for desktop, 14px for mobile
         </li>
         <li class="text-content__item">
-          <strong class="text-content__subtitle">Line Height:</strong> 1.6
+          <strong class="text-content__subtitle">Body Text Line Height:</strong> 1.6
         </li>
         <li class="text-content__item">
-          <strong class="text-content__subtitle">Letter-spacing:</strong> 0.5px
+          <strong class="text-content__subtitle">Body Text Letter-spacing:</strong> 0.5px
         </li>
         <li class="text-content__item">
           <div class="u-ff-sans">ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwxyz<br>1234567890</div>
