Update typography content

--- a/typography.html
+++ b/typography.html
@@ -67,44 +67,29 @@
   </div>
 
   <div class="container">
+
+    <h1>Typefaces</h1>
     <section class="text-content">
       <ul class="text-content__list">
-        
+
+
         <li class="text-content__item">
-          <h1 class="c-color-swatch---accent">Heading 1 Aa</h1>
+          <strong class="text-content__subtitle">Heading Font Family:</strong> 'Josefin Sans'
         </li>
         <li class="text-content__item">
-          <h2 class="u-ff-serif u-fw-700 u-text-primary">Heading 2 Aa</h2>
+          <strong class="text-content__subtitle">Heading Font Weight:</strong> 700 (Bold)
         </li>
 
         <li class="text-content__item">
-          <h3 class="u-ff-serif u-fw-700 u-text-primary">Heading 3 Aa</h3>
-        </li>
-
-        <li class="text-content__item">
-          <h4 class="u-ff-serif u-fw-700 u-text-primary">Heading 4 Aa</h4>
+          <strong class="text-content__subtitle">Heading Line Height:</strong> 1.2
         </li>
         <li class="text-content__item">
-          <h5 class="u-ff-serif u-fw-700 u-text-primary">Heading 5 Aa</h5>
-        </li>
-
-        <li class="text-content__item">
-          <strong class="text-content__subtitle">Font Family:</strong> 'Josefin Sans'
-        </li>
-        <li class="text-content__item">
-          <strong class="text-content__subtitle">Font Weight:</strong> 700 (Bold)
-        </li>
-
-        <li class="text-content__item">
-          <strong class="text-content__subtitle">Line Height:</strong> 1.2
-        </li>
-        <li class="text-content__item">
-          <strong class="text-content__subtitle">Letter-spacing:</strong> 1px
+          <strong class="text-content__subtitle">Heading Letter-spacing:</strong> 1px
         </li>
       </ul>
 
       <ul class="text-content__list">
-      <li class="text-content__item">
+        <li class="text-content__item">
           <strong class="text-content__subtitle">Body Text Font Family:</strong> Lato
         </li>
         <li class="text-content__item">
@@ -119,10 +104,20 @@
         <li class="text-content__item">
           <strong class="text-content__subtitle">Body Text Letter-spacing:</strong> 0.5px
         </li>
-        <li class="text-content__item">
-          <div class="u-ff-sans">ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwxyz<br>1234567890</div>
-        </li>
       </ul>
+
+    </section>
+
+    <section>
+        <p>Paragraph<br>ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwxyz<br>1234567890</p>
+        <hr>
+        <h4>Heading 4<br>ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwxyz<br>1234567890</h4>
+        <hr>
+        <h3>Heading 3<br>ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwxyz<br>1234567890</h3>
+        <hr>
+        <h2>Heading 2<br>ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwxyz<br>1234567890</h2>
+        <hr>
+        <h1>Heading 1<br>ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwxyz<br>1234567890</h1>
 
     </section>
 
