Refactor color scheme in HTML and CSS
- Removed outdated color utility classes from HTML.
- Added new color utility classes to enhance UI consistency.
- Updated color variables in CSS for improved theme adaptability.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h2 class="sidebar__title">Branding</h2>
       <ul class="sidebar__list">
         <li class="sidebar__item"><a href="colors.html" class="sidebar__link">01 Colours</a></li>
-        <li class="sidebar__item"><a href="#" class="sidebar__link">02 Typography</a></li>
+        <li class="sidebar__item"><a href="typography.html" class="sidebar__link">02 Typography</a></li>
         <li class="sidebar__item"><a href="#" class="sidebar__link">03 Logo</a></li>
       </ul>
 
