--- a/typography.html
+++ b/typography.html
@@ -28,7 +28,7 @@
       <h2 class="sidebar__title">Branding</h2>
       <ul class="sidebar__list">
         <li class="sidebar__item"><a href="colors.html" class="sidebar__link">01 Colours</a></li>
-        <li class="sidebar__item"><a href="#" class="sidebar__link">02 Typography</a></li>
+        <li class="sidebar__item"><a href="typography.html" class="sidebar__link">02 Typography</a></li>
         <li class="sidebar__item"><a href="#" class="sidebar__link">03 Logo</a></li>
       </ul>
 
