Update typography content

--- a/typography.html
+++ b/typography.html
@@ -109,15 +109,15 @@
     </section>
 
     <section>
-        <p>Paragraph<br>ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwxyz<br>1234567890</p>
-        <hr>
-        <h4>Heading 4<br>ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwxyz<br>1234567890</h4>
-        <hr>
-        <h3>Heading 3<br>ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwxyz<br>1234567890</h3>
-        <hr>
-        <h2>Heading 2<br>ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwxyz<br>1234567890</h2>
-        <hr>
-        <h1>Heading 1<br>ABCDEFGHIJKLMNOPQRSTUVWXYZ<br>abcdefghijklmnopqrstuvwxyz<br>1234567890</h1>
+        <p>Paragraph<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</p>
+        <br>
+        <h4>Heading 4<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h4>
+        <br>
+        <h3>Heading 3<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h3>
+        <br>
+        <h2>Heading 2<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h2>
+        <br>
+        <h1>Heading 1<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h1>
 
     </section>
 
