Add header markup for design system

--- a/index.html
+++ b/index.html
@@ -11,7 +11,31 @@
 
 <body>
 
+<header>
+  <div class="logo">Design System</div>
+  <div class="hamburger">
+    <div class="line"></div>
+    <div class="line"></div>
+    <div class="line"></div>
+  </div>
 
+  <nav class="nav-bar">
+    <ul>
+      <li>
+        <a href="" class="active">Home</a>
+      </li>
+      <li>
+        <a href="" class="active">Item2</a>
+      </li>
+      <li>
+        <a href="" class="active">Item3</a>
+      </li>
+      <li>
+        <a href="" class="active"></a>
+      </li>
+    </ul>
+  </nav>
+</header>
 
   <script src="design-system.js"></script>
 </body>
