Update navbar html

--- a/index.html
+++ b/index.html
@@ -11,31 +11,18 @@
 
 <body>
 
-<header>
-  <div class="logo">Design System</div>
-  <div class="hamburger">
-    <div class="line"></div>
-    <div class="line"></div>
-    <div class="line"></div>
+<section>
+  <div class="logo">
+    <a href="index.html">Design System</a>
   </div>
-
-  <nav class="nav-bar">
-    <ul>
-      <li>
-        <a href="" class="active">Home</a>
-      </li>
-      <li>
-        <a href="" class="active">Item2</a>
-      </li>
-      <li>
-        <a href="" class="active">Item3</a>
-      </li>
-      <li>
-        <a href="" class="active"></a>
-      </li>
-    </ul>
+  <nav>
+    <a href="">Item</a>
+    <a href="">Item</a>
+    <a href="">Item</a>
+    <a href="">Item</a>
+    <a href="">Item</a>
   </nav>
-</header>
+</section>
 
   <script src="design-system.js"></script>
 </body>
