Apply styles to navigation elements
Added toggleBox HTML structure with menu and close icons inside anchor tag

--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
   <div class="logo">
     <a href="index.html">Design System</a>
   </div>
-  <nav>
+  <nav class="navigation">
     <a href="">Item</a>
     <a href="">Item</a>
     <a href="">Item</a>
     <a href="">Item</a>
     <a href="">Item</a>
   </nav>
+
+  <div class="toggleBox">
+    <a href="#"><img class="menu" alt="menu icon" src="images/icons/more.png"><img class="close" src="images/icons/close.png" alt="close icon"></a>
+  </div>
 </section>
 
   <script src="design-system.js"></script>
