Add styles for active state of navigation
- When the class "active" is applied to nav.navigation, it will be displayed as a flex container with items centered vertically and horizontally, arranged in a column.
- Position the navigation element absolutely to cover the entire viewport.
- Added temporary background color for visibility.

Style anchor tags inside active navigation with padding, color, font size, font weight, and text decoration.

Apply invert filter to images inside toggleBox anchor tag.

Hide the menu icon when it has the class "hide".

Toggle the class "active" on the navigation element when clicked.
Toggle the classes "hide" and "show" on the menu and close images respectively when clicked.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </nav>
 
   <div class="toggleBox">
-    <a href="#"><img class="menu" alt="menu icon" src="images/icons/more.png"><img class="close" src="images/icons/close.png" alt="close icon"></a>
+    <a onclick="showMenu()" href="#"><img class="menu" alt="menu" src="images/icons/more.png"><img class="close" src="images/icons/close.png" alt="close"></a>
   </div>
 </section>
 
