--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
     <a href="index.html">Design System</a>
   </div>
   <nav class="navigation">
-    <a href="">Item</a>
-    <a href="">Item</a>
-    <a href="">Item</a>
-    <a href="">Item</a>
-    <a href="">Item</a>
+    <a href="">About Me</a>
+    <a href="">Demo Site</a>
   </nav>
 
   <div class="toggleBox">
