--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <a href="index.html">Design System</a>
   </div>
   <nav class="navigation">
-    <a href="">About Me</a>
+    <a href="about-me.html">About Me</a>
     <a href="">Demo Site</a>
   </nav>
 
