Copy navbar across all pages

--- a/about-me.html
+++ b/about-me.html
@@ -13,7 +13,7 @@
 
   <!-- Navbar -->
 
-  <section>
+  <header>
     <div class="logo">
       <a href="index.html">Design System</a>
     </div>
@@ -25,7 +25,7 @@
     <div class="toggleBox">
       <a onclick="showMenu()" href="#"><img class="menu" alt="menu" src="images/icons/more.png"><img class="close" src="images/icons/close.png" alt="close"></a>
     </div>
-  </section>
+  </header>
 
   <!-- add your name -->
   <h1 class="c-portfolio__name">Hi! My name is Abhiram Shaji</h1>
