--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-<section>
+<header>
   <div class="logo">
     <a href="index.html">Design System</a>
   </div>
@@ -23,6 +23,48 @@
   <div class="toggleBox">
     <a onclick="showMenu()" href="#"><img class="menu" alt="menu" src="images/icons/more.png"><img class="close" src="images/icons/close.png" alt="close"></a>
   </div>
+</header>
+
+<section class="sidebar">
+    <h2>Branding</h2>
+    <ul>
+      <li><a href="colors.html">01 Colours</a></li>
+      <li><a href="typography.html">02 Typography</a></li>
+      <li><a href="#">03 Logo</a></li>
+    </ul>
+
+    <h2>Utilities</h2>
+    <ul>
+      <li><a href="#">04 Spacing</a></li>
+      <li><a href="#">05 Containers</a></li>
+      <li><a href="#">06 Images</a></li>
+      <li><a href="#">07 Interactive</a></li>
+      <li><a href="#">08 Pages</a></li>
+    </ul>
+
+    <h2>Navigation</h2>
+    <ul>
+      <li><a href="#">09 Navbar</a></li>
+      <li><a href="#">10 Breadcrumbs</a></li>
+      <li><a href="#">11 Pagination</a></li>
+    </ul>
+
+    <h2>Blocks</h2>
+    <ul>
+      <li><a href="#">12 Hero</a></li>
+      <li><a href="#">13 Carousel</a></li>
+      <li><a href="#">14 Slats</a></li>
+      <li><a href="#">15 Footer</a></li>
+    </ul>
+
+    <h2>Components</h2>
+    <ul>
+      <li><a href="#">16 Cards</a></li>
+      <li><a href="#">17 Forms</a></li>
+      <li><a href="#">18 Accordion</a></li>
+      <li><a href="#">19 Lists</a></li>
+    </ul>
+
 </section>
 
   <script src="design-system.js"></script>
