Update logic for active page

--- a/about-me.html
+++ b/about-me.html
@@ -18,8 +18,8 @@
       <a href="index.html">Design System</a>
     </div>
     <nav class="navigation">
-      <a href="about-me.html"  id="about-link">About Me</a>
-      <a href="" id="demo-link">Demo Site</a>
+      <a href="about-me.html"  class="active">About Me</a>
+      <a href="">Demo Site</a>
     </nav>
   
     <div class="toggleBox">
