--- a/colors.html
+++ b/colors.html
@@ -28,7 +28,7 @@
   <section class="sidebar">
     <h2>Branding</h2>
     <ul>
-      <li><a href="colors.html">01 Colours</a></li>
+      <li><a href="colors.html" class="active">01 Colours</a></li>
       <li><a href="typography.html">02 Typography</a></li>
       <li><a href="#">03 Logo</a></li>
     </ul>
