--- a/typography.html
+++ b/typography.html
@@ -29,7 +29,7 @@
     <h2>Branding</h2>
     <ul>
       <li><a href="colors.html">01 Colours</a></li>
-      <li><a href="typography.html">02 Typography</a></li>
+      <li><a href="typography.html" class="active">02 Typography</a></li>
       <li><a href="#">03 Logo</a></li>
     </ul>
 
