--- a/about-me.html
+++ b/about-me.html
@@ -18,12 +18,13 @@
       <a href="index.html">Design System</a>
     </div>
     <nav class="navigation">
-      <a href="about-me.html"  class="active">About Me</a>
+      <a href="about-me.html" class="active">About Me</a>
       <a href="">Demo Site</a>
     </nav>
-  
+
     <div class="toggleBox">
-      <a onclick="showMenu()" href="#"><img class="menu" alt="menu" src="images/icons/more.png"><img class="close" src="images/icons/close.png" alt="close"></a>
+      <a onclick="showMenu()" href="#"><img class="menu" alt="menu" src="images/icons/more.png"><img class="close"
+          src="images/icons/close.png" alt="close"></a>
     </div>
   </header>
 
@@ -31,7 +32,8 @@
   <h1 class="c-portfolio__name">Hi! My name is Abhiram Shaji</h1>
   <h2 class="c-portfolio__role">I am an Android / Web developer.</h2>
   <!-- add your portrait photo -->
-  <img src="images/placeholder-square.jpg" alt="Portrait of Abhiram Shaji" class="c-portfolio__image" style="width: 500px; height: 500px" />
+  <img src="images/placeholder-square.jpg" alt="Portrait of Abhiram Shaji" class="c-portfolio__image"
+    style="width: 500px; height: 500px" />
   <!-- add a short biography. Include where you are from, your education background, your current program, and something interesting about yourself. -->
   <p class="c-portfolio__biography">
     With a fervent passion for crafting digital experiences, I intertwine my love for coding and creativity,
