--- a/typography.html
+++ b/typography.html
@@ -13,7 +13,7 @@
 
   <header>
     <div class="logo">
-      <a href="index.html">Design System</a>
+      <a class="logo_text" href="index.html"><h2>Design System</h2></a>
     </div>
     <nav class="navigation">
       <a href="about-me.html">About Me</a>
@@ -28,41 +28,41 @@
   <section class="sidebar">
     <h2>Branding</h2>
     <ul>
-      <li><a href="colors.html">01 Colours</a></li>
-      <li><a href="typography.html" class="active">02 Typography</a></li>
-      <li><a href="#">03 Logo</a></li>
+      <li><a class="sidebar_item" href="colors.html">01 Colours</a></li>
+      <li><a class="sidebar_item active" href="typography.html">02 Typography</a></li>
+      <li><a class="sidebar_item" href="#">03 Logo</a></li>
     </ul>
 
     <h2>Utilities</h2>
     <ul>
-      <li><a href="#">04 Spacing</a></li>
-      <li><a href="#">05 Containers</a></li>
-      <li><a href="#">06 Images</a></li>
-      <li><a href="#">07 Interactive</a></li>
-      <li><a href="#">08 Pages</a></li>
+      <li><a class="sidebar_item" href="#">04 Spacing</a></li>
+      <li><a class="sidebar_item" href="#">05 Containers</a></li>
+      <li><a class="sidebar_item" href="#">06 Images</a></li>
+      <li><a class="sidebar_item" href="#">07 Interactive</a></li>
+      <li><a class="sidebar_item" href="#">08 Pages</a></li>
     </ul>
 
     <h2>Navigation</h2>
     <ul>
-      <li><a href="#">09 Navbar</a></li>
-      <li><a href="#">10 Breadcrumbs</a></li>
-      <li><a href="#">11 Pagination</a></li>
+      <li><a class="sidebar_item" href="#">09 Navbar</a></li>
+      <li><a class="sidebar_item" href="#">10 Breadcrumbs</a></li>
+      <li><a class="sidebar_item" href="#">11 Pagination</a></li>
     </ul>
 
     <h2>Blocks</h2>
     <ul>
-      <li><a href="#">12 Hero</a></li>
-      <li><a href="#">13 Carousel</a></li>
-      <li><a href="#">14 Slats</a></li>
-      <li><a href="#">15 Footer</a></li>
+      <li><a class="sidebar_item" href="#">12 Hero</a></li>
+      <li><a class="sidebar_item" href="#">13 Carousel</a></li>
+      <li><a class="sidebar_item" href="#">14 Slats</a></li>
+      <li><a class="sidebar_item" href="#">15 Footer</a></li>
     </ul>
 
     <h2>Components</h2>
     <ul>
-      <li><a href="#">16 Cards</a></li>
-      <li><a href="#">17 Forms</a></li>
-      <li><a href="#">18 Accordion</a></li>
-      <li><a href="#">19 Lists</a></li>
+      <li><a class="sidebar_item" href="#">16 Cards</a></li>
+      <li><a class="sidebar_item" href="#">17 Forms</a></li>
+      <li><a class="sidebar_item" href="#">18 Accordion</a></li>
+      <li><a class="sidebar_item" href="#">19 Lists</a></li>
     </ul>
 
 </section>
