Add comments on html

--- a/colors.html
+++ b/colors.html
@@ -11,6 +11,7 @@
 
 <body>
 
+  <!-- Navbar -->
   <header>
     <div class="logo">
       <a class="logo_text" href="index.html"><h2>Design System</h2></a>
@@ -24,6 +25,9 @@
       <a onclick="showMenu()" href="#"><img class="menu" alt="menu" src="images/icons/more.png"><img class="close" src="images/icons/close.png" alt="close"></a>
     </div>
   </header>
+
+  <!-- Sidebar -->
+
 
   <section class="sidebar">
     <h2>Branding</h2>
@@ -67,6 +71,7 @@
 
 </section>
 
+  <!-- Color swatches -->
 
   <section class="container">
     <h1>Colors</h1>
