--- a/typography.html
+++ b/typography.html
@@ -11,6 +11,9 @@
 
 <body>
 
+
+  <!-- Navbar -->
+
   <header>
     <div class="logo">
       <a class="logo_text" href="index.html"><h2>Design System</h2></a>
@@ -24,6 +27,10 @@
       <a onclick="showMenu()" href="#"><img class="menu" alt="menu" src="images/icons/more.png"><img class="close" src="images/icons/close.png" alt="close"></a>
     </div>
   </header>
+
+
+  <!-- Sidebar -->
+
 
   <section class="sidebar">
     <h2>Branding</h2>
@@ -66,6 +73,9 @@
     </ul>
 
 </section>
+
+
+  <!-- Typefaces -->
 
 
   <div class="container">
