Remove existing utility classes

--- a/about-me.html
+++ b/about-me.html
@@ -15,7 +15,7 @@
 
   <header>
     <div class="logo">
-      <a href="index.html">Design System</a>
+      <a class="logo_text" href="index.html"><h2>Design System</h2></a>
     </div>
     <nav class="navigation">
       <a href="about-me.html" class="active">About Me</a>
