--- a/typography.html
+++ b/typography.html
@@ -16,15 +16,18 @@
 
   <header>
     <div class="logo">
-      <a class="logo_text" href="index.html"><h2>Design System</h2></a>
+      <a class="logo_text" href="index.html">
+        <h2>Design System</h2>
+      </a>
     </div>
     <nav class="navigation">
       <a href="about-me.html">About Me</a>
       <a href="">Demo Site</a>
     </nav>
-  
+
     <div class="toggleBox">
-      <a onclick="showMenu()" href="#"><img class="menu" alt="menu" src="images/icons/more.png"><img class="close" src="images/icons/close.png" alt="close"></a>
+      <a onclick="showMenu()" href="#"><img class="menu" alt="menu" src="images/icons/more.png"><img class="close"
+          src="images/icons/close.png" alt="close"></a>
     </div>
   </header>
 
@@ -72,64 +75,62 @@
       <li><a class="sidebar_item" href="#">19 Lists</a></li>
     </ul>
 
-</section>
+  </section>
 
 
   <!-- Typefaces -->
 
 
   <div class="container">
-
     <h1>Typefaces</h1>
-    <section class="text-content">
-      <ul class="text-content__list">
-
-
-        <li class="text-content__item">
-          <strong class="text-content__subtitle">Heading Font Family:</strong> 'Josefin Sans'
-        </li>
-        <li class="text-content__item">
-          <strong class="text-content__subtitle">Heading Font Weight:</strong> 700 (Bold)
-        </li>
-
-        <li class="text-content__item">
-          <strong class="text-content__subtitle">Heading Line Height:</strong> 1.2
-        </li>
-        <li class="text-content__item">
-          <strong class="text-content__subtitle">Heading Letter-spacing:</strong> 1px
-        </li>
-      </ul>
-
-      <ul class="text-content__list">
-        <li class="text-content__item">
-          <strong class="text-content__subtitle">Body Text Font Family:</strong> Lato
-        </li>
-        <li class="text-content__item">
-          <strong class="text-content__subtitle">Body Text Font Weight:</strong> 400 (Regular), 700 (Bold)
-        </li>
-        <li class="text-content__item">
-          <strong class="text-content__subtitle">Body Text Font Size:</strong> 16px for desktop, 14px for mobile
-        </li>
-        <li class="text-content__item">
-          <strong class="text-content__subtitle">Body Text Line Height:</strong> 1.6
-        </li>
-        <li class="text-content__item">
-          <strong class="text-content__subtitle">Body Text Letter-spacing:</strong> 0.5px
-        </li>
-      </ul>
-
-    </section>
 
     <section>
-        <p>Paragraph<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</p>
-        <br>
-        <h4>Heading 4<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h4>
-        <br>
-        <h3>Heading 3<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h3>
-        <br>
-        <h2>Heading 2<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h2>
-        <br>
-        <h1>Heading 1<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h1>
+      <ul>
+        <li>
+          <strong>Heading Font Family:</strong> 'Josefin Sans'
+        </li>
+        <li>
+          <strong>Heading Font Weight:</strong> 700 (Bold)
+        </li>
+
+        <li>
+          <strong>Heading Line Height:</strong> 1.2
+        </li>
+        <li>
+          <strong>Heading Letter-spacing:</strong> 1px
+        </li>
+      </ul>
+
+      <ul>
+        <li>
+          <strong>Body Text Font Family:</strong> Lato
+        </li>
+        <li>
+          <strong>Body Text Font Weight:</strong> 400 (Regular), 700 (Bold)
+        </li>
+        <li>
+          <strong>Body Text Font Size:</strong> 16px for desktop, 14px for mobile
+        </li>
+        <li>
+          <strong>Body Text Line Height:</strong> 1.6
+        </li>
+        <li>
+          <strong>Body Text Letter-spacing:</strong> 0.5px
+        </li>
+      </ul>
+    </section>
+
+
+    <section>
+      <p>Paragraph<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</p>
+      <br>
+      <h4>Heading 4<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h4>
+      <br>
+      <h3>Heading 3<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h3>
+      <br>
+      <h2>Heading 2<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h2>
+      <br>
+      <h1>Heading 1<br>ABCDEFGHIJK<br>abcdefghijk<br>1234567890</h1>
 
     </section>
 
